# auth-servis

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  bp.sh  config.example.nossl.json  config.example.ssl.json  docker-compose.yml  main.cc  run  servisCfg.example.json  test-db-servis-0.1.1-Linux.deb
controllers/: AuthController.cc  AuthController.h  ServisConfig.cc  ServisConfig.h  auth.cc  auth.h  configDb.example.h
deb/: auth-servis-0.1.1-Linux.deb
docks/: auth-servis.yaml
download/: auth-servis-3.11.2-Linux.deb
exmpl-desctop-with-auth/: CMakeLists.txt  example.config.json  main.cpp
exmpl-desctop-with-auth/mainwindow/: mainwindow.cpp  mainwindow.h
exmpl-desctop-with-auth/signinwindow/: signindialog.cpp  signindialog.h  signindialog.ui
exmpl-desctop-with-auth/signupwindow/: signupdialog.cpp  signupdialog.h  signupdialog.ui
exmpl-desctop-with-auth/utils/: Config.cpp  Config.h  token.cpp  token.h
src/app/: App.cc  App.h
src/controllers/login/: LoginController.cc  LoginController.h
src/controllers/registration/: RegistrationController.cc  RegistrationController.h
src/controllers/updateaccess/: UpdateAssessController.cc  UpdateAssessController.h
src/utils/: ServisConfig.h  auth.cc  auth.h
test/: CMakeLists.txt
utils/: ServisConfig.cc  auth.cc  auth.h
